[package]
name = "tiberius_row"
version = "0.1.1"
edition = "2021"
authors = ["vincentzreo <1978892854@qq.com>"]
description = "一个简化从Tiberius SQL Server客户端行数据到Rust结构体转换的过程宏库"
license = "MIT"
repository = "https://github.com/vincentzreo/tiberius_row"
documentation = "https://docs.rs/tiberius_row"
readme = "README.md"
keywords = ["tiberius", "sql-server", "derive", "macro", "orm"]
categories = ["database"]

[lib]
proc-macro = true

[dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
darling = "0.20.10"
proc-macro2 = "1.0.86"
quote = "1.0.37"
serde = { version = "1.0.209", features = ["derive"] }
serde_yaml = "0.9.34"
syn = { version = "2.0.76", features = ["extra-traits"] }
tiberius = { version = "0.12.3", features = ["chrono"] }
