[package]
name = "tiberius_row"
version = "0.2.0"
edition = "2021"
authors = ["vincentzreo <1978892854@qq.com>"]
description = "一个简化从Tiberius SQL Server客户端行数据到Rust结构体转换的过程宏库"
license = "MIT"
repository = "https://github.com/vincentzreo/tiberius_row"
documentation = "https://docs.rs/tiberius_row"
readme = "README.md"
keywords = ["tiberius", "sql-server", "derive", "macro", "orm"]
categories = ["database"]

[lib]
proc-macro = true

[dependencies]
anyhow = "1.0.86"
base64 = "0.22.1"
darling = "0.20.10"
proc-macro2 = "1.0.86"
quote = "1.0.37"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.140"
syn = { version = "2.0.76", features = ["extra-traits"] }
tiberius = { version = "0.12.3", features = ["chrono", "rust_decimal", "time"] }

[dev-dependencies]
config = "0.15.9"
tiberius_db_tester = "0.1.0"
tokio = { version = "1.43.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["compat"] }
uuid = { version = "1.15.1", features = ["v4"] }
chrono = { version = "0.4.38", features = ["serde"] }
