[package]
name = "tiberius_row"
version = "0.2.1"
edition = "2021"
authors = ["vincentzreo <1978892854@qq.com>"]
description = "一个简化从Tiberius SQL Server客户端行数据到Rust结构体转换的过程宏库"
license = "MIT"
repository = "https://github.com/vincentzreo/tiberius_row"
documentation = "https://docs.rs/tiberius_row"
readme = "README.md"
keywords = ["tiberius", "sql-server", "derive", "macro", "orm"]
categories = ["database"]

[lib]
proc-macro = true

[dependencies]
anyhow = { version = "1.0.86", optional = true }
base64 = { version = "0.22.1", optional = true }
darling = "0.20.10"
proc-macro2 = "1.0.86"
quote = "1.0.37"
serde = { version = "1.0.209", features = ["derive"], optional = true }
serde_json = { version = "1.0.140", optional = true }
syn = { version = "2.0.76", features = ["extra-traits"] }
tiberius = { version = "0.12.3", features = [
    "chrono",
    "rust_decimal",
    "time",
], optional = true }

[features]
default = ["deps"]
deps = ["anyhow", "base64", "serde", "serde_json", "tiberius"]

[dev-dependencies]
config = "0.15.9"
tiberius_db_tester = "0.1.0"
tokio = { version = "1.43.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["compat"] }
uuid = { version = "1.15.1", features = ["v4"] }
chrono = { version = "0.4.38", features = ["serde"] }
